crates/audio/src/engine/live/snapshots/audio__engine__live__deck_events__tests__a_landed_crossfade_preload_still_hands_over.snap
---
source: crates/audio/src/engine/live/track.rs
expression: log
---
[
    Cmd {
        effects: [
            Preload {
                path: "/b",
                mode: Crossfade {
                    gain: None,
                    speed: Speed(
                        1.0,
                    ),
                },
            },
        ],
        messages: [],
    },
    Cmd {
        effects: [
            Arm(
                Some(
                    90s,
                ),
            ),
        ],
        messages: [],
    },
]
