crates/audio/src/engine/live/snapshots/audio__engine__live__deck_events__tests__a_landed_gapless_preload_still_hands_over_at_the_end.snap
---
source: crates/audio/src/engine/live/track.rs
assertion_line: 207
expression: log
---
[
    Preload(
        Gapless(
            "/b",
        ),
    ),
    Nothing,
    Batch(
        [
            Advance,
            Send(
                TrackChanged,
            ),
            Report,
        ],
    ),
]
