crates/audio/src/engine/live/snapshots/audio__engine__live__deck_events__tests__a_preload_attach_after_a_stop_is_ignored.snap
---
source: crates/audio/src/engine/live/track.rs
expression: log
---
[
    Cmd {
        effects: [
            Run(
                Preload {
                    media_path: "/b",
                    download: None,
                    revision: Revision(
                        1,
                    ),
                },
            ),
        ],
        messages: [],
    },
    Cmd {
        effects: [
            Execute(
                StartLoad(
                    Speed(
                        1.0,
                    ),
                ),
            ),
        ],
        messages: [],
    },
]
