crates/audio/src/engine/live/snapshots/audio__engine__live__deck_events__tests__a_preload_install_after_a_stop_is_ignored.snap
---
source: crates/audio/src/engine/live/track.rs
expression: log
---
[
    Preload(
        Crossfade {
            path: "/b",
            gain: None,
            speed: Speed(
                1.0,
            ),
        },
    ),
    Clear,
    Nothing,
]
