crates/audio/src/engine/live/snapshots/audio__engine__live__deck_events__tests__a_preload_still_decoding_holds_up_neither_a_pause_nor_a_deck_event.snap
---
source: crates/audio/src/engine/live/track.rs
assertion_line: 160
expression: log
---
[
    Cmd {
        effects: [
            Preload {
                path: "/b",
                mode: Gapless,
            },
        ],
        messages: [],
    },
    Cmd {
        effects: [
            Pause,
            Report,
        ],
        messages: [],
    },
    Cmd {
        effects: [],
        messages: [],
    },
]
